feat: css & package.json

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* 
+/*
  * reset styles
  */
 
@@ -17,7 +17,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-/* 5. Improve media defauls */
+/* 5. Improve media defaults */
 img,
 picture,
 video,
@@ -54,18 +54,19 @@ h6 {
 
 /* fonts */
 @font-face {
-  font-family: "Roboto Mono";
+  font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400 600;
-  src: local("Roboto Mono"),
-    url("/fonts/RobotoMono-VariableFont_wght.ttf") format("truetype");
+  src:
+    local('Roboto Mono'),
+    url('/fonts/RobotoMono-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Roboto Mono";
+  font-family: 'Roboto Mono';
   font-style: italic;
   font-weight: 400 600;
-  src: url("/fonts/RobotoMono-Italic-VariableFont_wght.ttf") format("truetype");
+  src: url('/fonts/RobotoMono-Italic-VariableFont_wght.ttf') format('truetype');
 }
 
 /* colour theme */
@@ -93,7 +94,9 @@ h6 {
 
 /* defaults */
 :root {
-  font-family: Roboto Mono, monospace;
+  font-family:
+    Roboto Mono,
+    monospace;
   line-height: 1.5;
   font-weight: 400;
 
